syntax = "proto3";

package admin.api.admin.adminv1;

option go_package = "github.com/ikaiguang/go-srv-admin/api/admin/v1/resources;adminv1";
option java_multiple_files = true;
option java_package = "user.api.admin.adminv1";
option java_outer_classname = "AdminApiAdminAdminV1";

import "github.com/ikaiguang/go-srv-kit/api/page/v1/page.v1.proto";
import "github.com/ikaiguang/go-srv-admin/api/admin/v1/enums/admin.enum.v1.proto";

// Info 用户信息
message Info {
  uint64 id = 1;
  string admin_mobile = 2;
  string admin_email = 3;
  string admin_nickname = 4;
  string admin_avatar = 5;
  adminenumv1.AdminGenderEnum.AdminGender admin_gender = 6;
  adminenumv1.AdminStatusEnum.AdminStatus admin_status = 7;
}

/**
 *
 * @apiDefine Admin admin
 *
 * @apiSuccess (Admin) {uint64} id ID
 * @apiSuccess (Admin) {string} admin_uuid uuid
 * @apiSuccess (Admin) {string} admin_email 邮箱
 * @apiSuccess (Admin) {string} admin_nickname 昵称
 * @apiSuccess (Admin) {string} admin_avatar 头像
 * @apiSuccess (Admin) {string} admin_gender 性别
 * @apiSuccess (Admin) {string} admin_status 状态
 * @apiSuccess (Admin) {string} active_begin_time 激活开始时间
 * @apiSuccess (Admin) {string} active_end_time 激活结束时间
 * @apiSuccess (Admin) {string} disable_time 禁用时间
 * @apiSuccess (Admin) {string} blacklist_time 黑名单时间
 * @apiSuccess (Admin) {string} deleted_time 删除时间
 * @apiSuccess (Admin) {string} created_time 创建时间
 * @apiSuccess (Admin) {string} updated_time 最后修改时间
 *
 */

// Admin ENGINE InnoDB CHARSET utf8mb4 COMMENT '管理员'
message Admin {
  // id ID
  uint64 id = 1;
  // admin_uuid uuid
  string admin_uuid = 2;
  // admin_email 邮箱
  string admin_email = 3;
  // admin_nickname 昵称
  string admin_nickname = 4;
  // admin_avatar 头像
  string admin_avatar = 5;
  // admin_gender 性别
  string admin_gender = 6;
  // admin_status 状态
  string admin_status = 7;
  // active_begin_time 激活开始时间
  string active_begin_time = 8;
  // active_end_time 激活结束时间
  string active_end_time = 9;
  // disable_time 禁用时间
  string disable_time = 10;
  // blacklist_time 黑名单时间
  string blacklist_time = 11;
  // deleted_time 删除时间
  string deleted_time = 12;
  // created_time 创建时间
  string created_time = 13;
  // updated_time 最后修改时间
  string updated_time = 14;
}

/**
 *
 * @apiDefine AdminSaveReq AdminSaveReq
 *
 * @apiParam (AdminSaveReq) {uint64} id ID
 * @apiParam (AdminSaveReq) {string} admin_uuid uuid
 * @apiParam (AdminSaveReq) {string} admin_email 邮箱
 * @apiParam (AdminSaveReq) {string} admin_nickname 昵称
 * @apiParam (AdminSaveReq) {string} admin_avatar 头像
 * @apiParam (AdminSaveReq) {string} admin_gender 性别
 * @apiParam (AdminSaveReq) {string} admin_status 状态
 * @apiParam (AdminSaveReq) {string} active_begin_time 激活开始时间
 * @apiParam (AdminSaveReq) {string} active_end_time 激活结束时间
 * @apiParam (AdminSaveReq) {string} disable_time 禁用时间
 * @apiParam (AdminSaveReq) {string} blacklist_time 黑名单时间
 * @apiParam (AdminSaveReq) {string} deleted_time 删除时间
 * @apiParam (AdminSaveReq) {string} created_time 创建时间
 * @apiParam (AdminSaveReq) {string} updated_time 最后修改时间
 *
 */

// AdminSaveReq save
message AdminSaveReq {
  // id ID
  uint64 id = 1;
  // admin_uuid uuid
  string admin_uuid = 2;
  // admin_email 邮箱
  string admin_email = 3;
  // admin_nickname 昵称
  string admin_nickname = 4;
  // admin_avatar 头像
  string admin_avatar = 5;
  // admin_gender 性别
  string admin_gender = 6;
  // admin_status 状态
  string admin_status = 7;
  // active_begin_time 激活开始时间
  string active_begin_time = 8;
  // active_end_time 激活结束时间
  string active_end_time = 9;
  // disable_time 禁用时间
  string disable_time = 10;
  // blacklist_time 黑名单时间
  string blacklist_time = 11;
  // deleted_time 删除时间
  string deleted_time = 12;
  // created_time 创建时间
  string created_time = 13;
  // updated_time 最后修改时间
  string updated_time = 14;
}

/**
 *
 * @apiDefine AdminIdReq AdminIdReq
 *
 * @apiParam (AdminIdReq) {int64} admin_id id
 *
 */

// AdminIdReq id
message AdminIdReq {
  // admin_id id
  int64 admin_id = 1;
}

/**
 *
 * @apiDefine AdminIdsReq AdminIdsReq
 *
 * @apiParam (AdminIdsReq) {int64-array} admin_ids ids
 *
 */

// AdminIdsReq ids
message AdminIdsReq {
  // admin_ids ids
  repeated int64 admin_ids = 1;
}

/**
 *
 * @apiDefine AdminListReq AdminListReq
 *
 * @apiParam (AdminListReq) {kit.api.page.pagev1.PageRequest} page_request paging request
 *
 */

// AdminListReq list
message AdminListReq {
  // page_request paging request
  kit.api.page.pagev1.PageRequest page_request = 1;
}

/**
 *
 * @apiDefine AdminListResp AdminListResp
 *
 * @apiSuccess (AdminListResp) {Admin-array} list Admin-array
 * @apiSuccess (AdminListResp) {kit.api.page.pagev1.PageResponse} page_info paging response
 *
 */

// AdminListResp list
message AdminListResp {
  // list Admin-array
  repeated Admin list = 1;
  // page_info paging response
  kit.api.page.pagev1.PageResponse page_info = 2;
}

/**
 *
 * @apiDefine AdminProcessResult AdminProcessResult
 *
 * @apiSuccess (AdminProcessResult) {bool} success true or false
 *
 */

// AdminProcessResult process result
message AdminProcessResult {
  // success true or false
  bool success = 1;
}
