syntax = "proto3";

package admin.api.adminservicev1;

option go_package = "github.com/ikaiguang/go-srv-admin/api/admin/v1/services;adminservicev1";
option java_multiple_files = true;
option java_package = "admin.api.adminservicev1";
option java_outer_classname = "AdminApiAdminServiceV1";

import "google/api/annotations.proto";
import "github.com/ikaiguang/go-srv-admin/api/admin/v1/resources/admin_auth.resource.v1.proto";

// SrvAdminAuth 管理员服务
service SrvAdminAuth {
  // LoginByEmail Email登录
  rpc LoginByEmail(adminv1.LoginByEmailReq) returns (adminv1.LoginResp) {
    option (google.api.http) = {
      post : "/admin/v1/admin-auth/login-by-email"
      body : "*"
    };
  }
  // Ping ping pong
  rpc Ping(adminv1.PingReq) returns (adminv1.PingResp) {
    option (google.api.http) = {
      get : "/admin/v1/admin-auth/ping"
      // body: "*"
    };
  }
}